# vortex-kernels

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yml  pixi.toml  pyproject.toml
benchmarks/: profile_evo2.py
docs/: issue_draft.md
results/baseline_profile/: combined_summary.json  layer_breakdown_evo2_7b_L2048.json  layer_breakdown_evo2_7b_L32768.json  layer_breakdown_evo2_7b_L65536.json  layer_breakdown_evo2_7b_L8192.json  report.md  summary_evo2_7b_L2048.json  summary_evo2_7b_L32768.json  summary_evo2_7b_L65536.json  summary_evo2_7b_L8192.json  top_ops_evo2_7b_L2048.txt  top_ops_evo2_7b_L32768.txt  top_ops_evo2_7b_L65536.txt  top_ops_evo2_7b_L8192.txt
scripts/: setup_lambda.sh  setup_lambda_conda.sh  setup_vm.sh  setup_vm_conda.sh  verify_install.py
tests/: conftest.py  test_smoke.py
vortex_kernels/: __init__.py  patching.py
vortex_kernels/interfaces/: hcl.py  hcm.py  hcs.py
vortex_kernels/reference/: baseline.py
